--- a/day1/Cargo.toml
+++ b/day1/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-counter = "0.5.7"
-itertools = "0.12.0"
+counter = { workspace = true }
+itertools = { workspace = true }
